add start needed files

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 /web/bundles/
-/app/bootstrap.php.cache
 /app/cache/*
-/app/config/parameters.yml
 /app/logs/*
 !app/cache/.gitkeep
 !app/logs/.gitkeep
@@ -10,3 +8,4 @@
 /vendor/
 /bin/
 /composer.phar
+/.idea
