--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -34,9 +34,14 @@ twig:
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        [ ]
+    #bundles:        [ ]
     #java: /usr/bin/java
     filters:
+        coffee:
+            bin: /usr/local/bin/coffee
+            node: /usr/local/bin/node
+            #bin: D:/nodeJsProgramFiles/nodejs/node_global/coffee
+            #node: D:/nodeJsProgramFiles/nodejs/node
         cssrewrite: ~
         #closure:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
