--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -5,7 +5,7 @@ parameters:
     database_port:     ~
     database_name:     21cake
     database_user:     root
-    database_password: ~
+    database_password: 111111
     # You should uncomment this if you want use pdo_sqlite
     # database_path: "%kernel.root_dir%/data.db3"
 
