--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -36,13 +36,15 @@ assetic:
     use_controller: false
     #bundles:        [ ]
     #java: /usr/bin/java
+    node: /usr/local/bin/node
     filters:
         coffee:
             bin: /usr/local/bin/coffee
-            node: /usr/local/bin/node
             #bin: D:/nodeJsProgramFiles/nodejs/node_global/coffee
             #node: D:/nodeJsProgramFiles/nodejs/node
         cssrewrite: ~
+        uglifyjs2:
+            bin: /usr/local/bin/uglifyjs
         #closure:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
         #yui_css:
